--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Odin-Website</title>
 </head>
 <body>
-    
+    <div class="header">
+        <p>Header Logo</p>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+        <h1>This website is awesome</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, aliquid, sequi excepturi dolorum nam sapiente 
+           magnam assumenda doloribus repellendus libero quas deserunt est dolorem natus iste ullam. Culpa, enim at!</p>
+           <button>Sign up</button>
+           <img src="" alt="">
+    </div>
 </body>
 </html>
