Made the header using flex and styled it in css.
Added a picture to header and the link and author to README.md file.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
     <div class="header">
-        <p>Header Logo</p>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-        <h1>This website is awesome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, aliquid, sequi excepturi dolorum nam sapiente 
-           magnam assumenda doloribus repellendus libero quas deserunt est dolorem natus iste ullam. Culpa, enim at!</p>
-           <button>Sign up</button>
-           <img src="" alt="">
+        <div class="header-top">
+            <h3>Header Logo</h3>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div class="header-bottom">
+            <div class="header-text">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, aliquid, sequi excepturi dolorum nam sapiente 
+                magnam assumenda doloribus repellendus libero quas deserunt est dolorem natus iste ullam. Culpa, enim at!</p>
+                <button>Sign up</button>
+        </div>
+            <img src="https://images.pexels.com/photos/1493210/pexels-photo-1493210.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Woman on Rock Formation Holding a Flag">
+        </div>
     </div>
 </body>
 </html>
