Added information section with pictures
Styled the section and formated it.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,30 @@
             <img src="https://images.pexels.com/photos/1493210/pexels-photo-1493210.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Woman on Rock Formation Holding a Flag">
         </div>
     </div>
+    <div class="information">
+        <h2>Some random information.</h2>
+        <div class="subsection">
+            <div class="picture">
+                <img src="https://cdn.pixabay.com/photo/2022/11/15/11/42/frame-7593797_1280.png" alt="square with silver borders">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="picture">
+                <img src="https://cdn.pixabay.com/photo/2022/11/15/11/42/frame-7593797_1280.png" alt="square with silver borders">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="picture">
+                <img src="https://cdn.pixabay.com/photo/2022/11/15/11/42/frame-7593797_1280.png" alt="square with silver borders">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="picture">
+                <img src="https://cdn.pixabay.com/photo/2022/11/15/11/42/frame-7593797_1280.png" alt="square with silver borders">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        <div class="quote">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor sint a officia officiis, quos inventore? Minima at adipisci mollitia. 
+               Eum nemo temporibus non placeat laboriosam vero quibusdam tenetur debitis praesentium!</p>
+               <div class="author"></div>
+        </div>
 </body>
 </html>
