--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
+    </div>
         <div class="quote">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor sint a officia officiis, quos inventore? Minima at adipisci mollitia. 
                Eum nemo temporibus non placeat laboriosam vero quibusdam tenetur debitis praesentium!</p>
-               <div class="author"></div>
+            <div class="author">-Thor, God of Thunder</div>
         </div>
 </body>
 </html>
