--- a/index.html
+++ b/index.html
@@ -47,10 +47,17 @@
             </div>
         </div>
     </div>
-        <div class="quote">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor sint a officia officiis, quos inventore? Minima at adipisci mollitia. 
-               Eum nemo temporibus non placeat laboriosam vero quibusdam tenetur debitis praesentium!</p>
-            <div class="author">-Thor, God of Thunder</div>
+    <div class="quote">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor sint a officia officiis, quos inventore? Minima at adipisci mollitia. 
+            Eum nemo temporibus non placeat laboriosam vero quibusdam tenetur debitis praesentium!</p>
+        <div class="author">-Thor, God of Thunder</div>
+    </div>
+    <div class="action">
+        <div class="text">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
